[package]
name = "win_dedupe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
cursive = { git = "https://github.com/gyscos/cursive", default-features = false, features = [
    "crossterm-backend",
] }
mft = { git = "https://github.com/omerbenamram/mft", rev = "6767bb5" }
multimap = "0.9.1"
ntfs = "0.4.0"
smallvec = "1.11.2"
winsafe = { version = "0.0.19", features=["kernel"] }
windows = { version = "0.52.0", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }
num-format = "0.4.4"

[build-dependencies]
winres = "0.1.12"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
